# EconWorkflow

./: .gitignore  ECON_OS_2.0_ACTIVATED.md  README.md  econflow.ps1  pyproject.toml  test_webui.py  test_webui2.py  workflow.toml
agents/: AGENTS_ECON_OS_2.0.md  _custom_roles.json
agents/b1_explorer/: card.md  profile.json  role.md
agents/b2_challenger/: role.md
agents/c1_designer/: memory.md  role.md
agents/c2_data_auditor/: role.md
agents/d1_engineer/: role.md
agents/d2_qa_auditor/: role.md
agents/e1_runner/: role.md
agents/e2_adversarial_auditor/: role.md
agents/f1_narrator/: role.md
agents/f2_journal_reviewer/: role.md
agents/ma_cleaning/: card.md  memory.md  role.md
agents/ma_data/: card.md  memory.md  role.md
agents/ma_literature/: card.md  memory.md  profile.json  role.md
agents/ma_regression/: card.md  memory.md  role.md
agents/ma_replication/: card.md  memory.md  role.md
agents/phd_data/: card.md  memory.md  role.md
agents/phd_feasibility/: card.md  memory.md  profile.json  role.md
agents/phd_story/: card.md  memory.md  role.md
agents/test-role/: card.md  memory.md  profile.json  role.md
econflow/: __main__.py  cli.py  core.py  llm.py  processes.py  webui.py
econflow/static/: editor-enhancements.css  editor-enhancements.js  style.css
econflow/templates/: base.html  file_view.html  index.html  project.html  settings_api.html  settings_people.html  settings_processes.html
projects/: README.md
projects/.econ-os-template/: README.md  project_config.yaml
shared-notes/: README.md  design-sources.md  process_state.json
(+81 files in other folders)
