[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-research-workflow"
version = "0.1.0"
description = "Local-first Econ-OS 2.0 workflow shell for schema-driven economics research orchestration."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["economics", "workflow", "local-first", "multi-agent", "schema-driven", "research"]
dependencies = ["Flask>=3.0"]

[project.scripts]
econflow = "econflow.cli:main"

[tool.setuptools]
packages = ["econflow"]

[tool.setuptools.package-data]
econflow = ["templates/*.html", "static/**/*"]
